force-app/main/default/objects/HRZ_Country__c/HRZ_Country__c.object-meta.xml
<CustomObject>
    <description>Custom object to save country&apos;s information</description>
    <label>Country</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>