force-app/main/default/objects/HRZ_Country__c/fields/HRZ_Alpha2Code__c.field-meta.xml
<CustomField>
    <fullName>HRZ_Alpha2Code__c</fullName>
    <description>Alpha2Code of the country</description>
    <externalId>true</externalId>
    <label>Alpha2Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>