force-app/main/default/objects/HRZ_Country__c/fields/HRZ_Alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>HRZ_Alpha3Code__c</fullName>
    <description>Alpha3Code of the country</description>
    <label>Alpha3Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>