force-app/main/default/objects/HRZ_Country__c/fields/HRZ_Capital__c.field-meta.xml
<CustomField>
    <fullName>HRZ_Capital__c</fullName>
    <description>Capital of the country</description>
    <label>Capital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>