force-app/main/default/objects/HRZ_Country__c/fields/HRZ_Latitude__c.field-meta.xml
<CustomField>
    <fullName>HRZ_Latitude__c</fullName>
    <description>Latitude of the country</description>
    <label>Latitude</label>
    <precision>17</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>