force-app/main/default/objects/HRZ_Country__c/fields/HRZ_Longitude__c.field-meta.xml
<CustomField>
    <fullName>HRZ_Longitude__c</fullName>
    <description>Longitude of the country</description>
    <label>Longitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>