force-app/main/default/objects/HRZ_Country__c/fields/HRZ_Region__c.field-meta.xml
<CustomField>
    <fullName>HRZ_Region__c</fullName>
    <description>Region of the country</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>