force-app/main/default/objects/HRZ_Country__c/fields/HRZ_Regional_Blocs__c.field-meta.xml
<CustomField>
    <fullName>HRZ_Regional_Blocs__c</fullName>
    <description>Acronyms for country</description>
    <label>Regional Blocs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>